--- a/src/styles/_custom.scss
+++ b/src/styles/_custom.scss
@@ -1,8 +1,3 @@
-$container-max-widths: (
-        sm: 540px,
-        md: 720px,
-        lg: 960px,
-        xl: 1800px
-) !default;
+@import '_variables.scss';
 
 @import '../../node_modules/bootstrap/scss/bootstrap.scss';
